--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,9 +4,21 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/stylesheets/styles.css" />
     <title>LifeCraft</title>
   </head>
   <body>
+    <nav id="navibar">
+      <span>LifeCraft</span>
+      <form action="">
+        <input type="text" placeholder="Discover life's inspirations..." />
+        <button><img src="/images/search-icon.png" /></button>
+      </form>
+      <div>
+        <img src="/images/shop-icon.png" />
+        <img src="/images/bell-icon.png" />
+      </div>
+    </nav>
     <h3>Crafts, inspired by Life.</h3>
     <ul>
       <a href="/api/v1/crafts/new"> Add New Item</a>
