--- a/views/show.ejs
+++ b/views/show.ejs
@@ -4,9 +4,21 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/stylesheets/styles.css" />
     <title>Document</title>
   </head>
   <body>
+    <nav id="navibar">
+      <span>LifeCraft</span>
+      <form action="">
+        <input type="text" placeholder="Discover life's inspirations..." />
+        <button><img src="/images/search-icon.png" /></button>
+      </form>
+      <div>
+        <img src="/images/shop-icon.png" />
+        <img src="/images/bell-icon.png" />
+      </div>
+    </nav>
     <h1><%=craft.title %></h1>
     <img src="<%=craft.image%>" />
     <div>$<%=craft.price%>, <%=craft.stock%> in stock</div>
