--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -30,5 +30,20 @@ body {
   border-radius: 50%;
 }
 
-#navibar button img {
+#product {
+  display: grid;
+  grid-template-columns: 60% 40%;
+}
+
+#product #img-review {
+  grid-column: 1/1;
+}
+
+#product #seller-dets {
+  grid-column: 2/2;
+}
+
+#img-review img {
+  border-radius: 20px;
+  height: 50vh;
 }
