--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -26,26 +26,34 @@
         </div>
       </div>
       <div id="seller-dets">
-        <h1><%=craft.title %></h1>
-        <a href="/api/v1/crafts/<%=craft._id%>/edit"
-          ><img src="/images/pencil-icon.png"
-        /></a>
-        <div>$<%=craft.price%></div>
-        <% if (craft.stock > 0) {%> <%=craft.stock%> in stock
-        <div>
-          <label for="qty-select">Quantity:</label>
-          <select name="qty-select" id="qty-select">
-            <% for (let i = 1; i <= craft.stock ; i ++) {%>
-            <option value="<%= i %> "><%= i %></option>
-            <% } %>
-          </select>
-        </div>
-        <button>Buy Now</button>
-        <button>Add to Cart</button>
-        <% } else {%>
-        <div>Out Of Stock!</div>
-        <% } %>
-        <div><%=craft.description%></div>
+        <form action="/api/v1/crafts/<%=craft._id%>?_method=PUT" method="POST">
+          <label for="title">Title:</label>
+          <input
+            type="text"
+            name="title"
+            id="title"
+            value="<%=craft.title %>"
+          />
+          <label for="price">Price:</label>
+          <input
+            type="number"
+            name="price"
+            id="price"
+            value="<%=craft.price%>"
+          />
+          <label for="stock">Stock:</label>
+          <input
+            type="number"
+            name="stock"
+            id="stock"
+            value="<%=craft.stock%>"
+          />
+          <label for="description">Description:</label>
+          <textarea name="description" id="description" cols="30" rows="10">
+<%=craft.description%></textarea
+          >
+          <button>&#x2714;</button>
+        </form>
       </div>
     </div>
   </body>
