--- a/views/new.ejs
+++ b/views/new.ejs
@@ -20,20 +20,12 @@
       </div>
     </nav>
     <div id="product">
-      <div id="img-review">
-        <div>
-          <img src="<%=craft.image%>" />
-        </div>
-      </div>
       <div id="seller-dets">
-        <form action="/api/v1/crafts/<%=craft._id%>?_method=PUT" method="POST">
+        <form action="/api/v1/crafts/" method="POST">
+          <label for="Image">Image:</label>
+          <input type="text" name="image" id="image" />
           <label for="title">Title:</label>
-          <input
-            type="text"
-            name="title"
-            id="title"
-            value="<%=craft.title %>"
-          />
+          <input type="text" name="title" id="title" placeholder="Title" />
           <label for="category-select">Choose a category:</label>
           <select name="category" id="category-select">
             <% for (let category of craftSchema.obj.category.enum) {%>
@@ -41,23 +33,17 @@
             <% } %>
           </select>
           <label for="price">Price:</label>
-          <input
-            type="number"
-            name="price"
-            id="price"
-            value="<%=craft.price%>"
-          />
+          <input type="number" name="price" id="price" placeholder="Price" />
           <label for="stock">Stock:</label>
-          <input
-            type="number"
-            name="stock"
-            id="stock"
-            value="<%=craft.stock%>"
-          />
+          <input type="number" name="stock" id="stock" placeholder="Stock" />
           <label for="description">Description:</label>
-          <textarea name="description" id="description" cols="30" rows="10">
-<%=craft.description%></textarea
-          >
+          <textarea
+            name="description"
+            id="description"
+            cols="30"
+            rows="10"
+            placeholder="Description"
+          ></textarea>
           <button>&#x2714;</button>
         </form>
       </div>
