Added delete route

--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -58,7 +58,7 @@
           <textarea name="description" id="description" cols="30" rows="10">
 <%=craft.description%></textarea
           >
-          <button>&#x2714;</button>
+          <button>Save Craft</button>
         </form>
       </div>
     </div>
