--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -2,6 +2,13 @@ body {
   margin: 0;
 }
 
+#logo {
+  font-family: 'Fredericka the Great', cursive;
+  font-size: 60px;
+  color: #e9dac1;
+  text-decoration: none;
+}
+
 #navibar {
   display: flex;
   justify-content: space-around;
