--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,13 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Dosis:wght@400;600;700&family=Fredericka+the+Great&family=Source+Serif+4:opsz@8..60&display=swap');
+    </style>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/stylesheets/styles.css" />
+    <link rel="stylesheet" href="/stylesheets/index.css" />
     <title>LifeCraft</title>
   </head>
   <body>
     <nav id="navibar">
-      <span>LifeCraft</span>
+      <a href="/api/v1/crafts" id="logo">LifeCraft</a>
       <form action="">
         <input type="text" placeholder="Discover life's inspirations..." />
         <button><img src="/images/search-icon.png" /></button>
@@ -19,16 +23,42 @@
         <img src="/images/bell-icon.png" />
       </div>
     </nav>
-    <h3>Crafts, inspired by Life.</h3>
-    <ul>
-      <a href="/api/v1/crafts/new"> Add New Item</a>
-      <%for (let craft of crafts){%>
-      <div>
-        <%=craft.title%><a href="/api/v1/crafts/<%=craft._id%>"
-          ><img src="<%=craft.image%>" /></a
-        ><%=craft.price%>
+    <div id="seller-dashboard">
+      <div id="display">
+        <%for (let craft of crafts){%>
+        <div class="card">
+          <a href="/api/v1/crafts/<%=craft._id%>"
+            ><img src="<%=craft.image%>" /></a
+          ><span class="price">$<%=craft.price%></span>
+          <span class="title"><%=craft.title%></span>
+        </div>
+        <% } %>
       </div>
-      <% } %>
-    </ul>
+      <div id="controls">
+        <div>Name of Store</div>
+        <div>Sales Total/Store Rating</div>
+        <form action="/api/v1/crafts/new"><button>New Craft</button></form>
+        <form action="">
+          <div>Filter Crafts</div>
+          <fieldset>
+            <legend>Category</legend>
+            <% for (let category of craftSchema.obj.category.enum) {%>
+            <input type="radio" id="<%=category %> " />
+            <label for="<%=category %>"><%=category %> </label>
+            <% } %>
+          </fieldset>
+          <fieldset>
+            <legend>Price</legend>
+            <input type="radio" id="" />
+            <label for="kraken">Kraken</label>
+          </fieldset>
+          <fieldset>
+            <legend>Rating</legend>
+            <input type="radio" id="" />
+            <label for="kraken">Kraken</label>
+          </fieldset>
+        </form>
+      </div>
+    </div>
   </body>
 </html>
