--- a/views/new.ejs
+++ b/views/new.ejs
@@ -4,12 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Dosis:wght@400;600;700&family=Fredericka+the+Great&family=Source+Serif+4:opsz@8..60&display=swap');
+      </style>
     <link rel="stylesheet" href="/stylesheets/styles.css" />
     <title>Document</title>
   </head>
   <body>
     <nav id="navibar">
-      <a href="/api/v1/crafts">LifeCraft</a>
+      <a href="/api/v1/crafts" id="logo">LifeCraft</a>
       <form action="">
         <input type="text" placeholder="Discover life's inspirations..." />
         <button><img src="/images/search-icon.png" /></button>
