--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -6,10 +6,12 @@
 #display {
   grid-column: 1/1;
   display: flex;
+  justify-content: space-evenly;
   font-family: 'Dosis', sans-serif;
   font-weight: 600;
   flex-wrap: wrap;
   row-gap: 20px;
+  background-color: #f7ecde;
 }
 
 #controls {
@@ -18,9 +20,20 @@
 
 .card {
   width: 350px;
+  height: 250px;
   position: relative;
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  border-radius: 20px;
+  transition: 300ms;
+  box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.1);
+}
+
+.card:hover {
+  transform: translateY(-2px);
+  box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.3);
 }
 
 .card img {
@@ -33,8 +46,8 @@
 .price {
   position: absolute;
   width: 50px;
-  bottom: 15%;
-  left: 3%;
+  bottom: 22%;
+  left: 11%;
   background-color: white;
   border-radius: 10px;
   text-align: center;
