Added styling to control panel on index for seller

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -35,9 +35,11 @@
         <% } %>
       </div>
       <div id="controls">
-        <div>Name of Store</div>
+        <div id="storeName">Name of Store</div>
         <div>Sales Total/Store Rating</div>
-        <form action="/api/v1/crafts/new"><button>New Craft</button></form>
+        <form action="/api/v1/crafts/new">
+          <button id="new">New Craft</button>
+        </form>
         <form action="">
           <div>Filter Crafts</div>
           <fieldset>
