--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -1,21 +1,36 @@
 #seller-dashboard {
   display: grid;
-  grid-template-columns: 70% 30%;
+  grid-template-columns: 75% 25%;
+  height: 100vh;
 }
 
 #display {
   grid-column: 1/1;
   display: flex;
   justify-content: space-evenly;
+  align-items: center;
   font-family: 'Dosis', sans-serif;
   font-weight: 600;
   flex-wrap: wrap;
-  row-gap: 20px;
   background-color: #f7ecde;
 }
 
 #controls {
   grid-column: 2/2;
+  background-color: #f7ecde;
+  font-family: 'Dosis', sans-serif;
+  font-weight: 600;
+  display: flex;
+  justify-content: center;
+  align-content: flex-start;
+  flex-wrap: wrap;
+  font-size: 30px;
+  row-gap: 20px;
+}
+
+#storeName {
+  font-size: 50px;
+  font-family: 'Fredericka the Great', cursive;
 }
 
 .card {
@@ -26,6 +41,8 @@
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
+  margin: 20px;
+  padding: 10px 0px;
   border-radius: 20px;
   transition: 300ms;
   box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.1);
@@ -51,4 +68,28 @@
   background-color: white;
   border-radius: 10px;
   text-align: center;
+  border: 1px solid rgba(0, 0, 0, 0.3);
+  font-size: 15px;
+}
+.title {
+  font-size: 18px;
+  font-weight: 700;
+}
+
+#new {
+  font-family: 'Dosis', sans-serif;
+  font-weight: 700;
+  font-size: 40px;
+  display: block;
+  width: 100%;
+  padding: 20px 40px;
+  border-radius: 50px;
+  background-color: #9ed2c6;
+  transition: 300ms;
+  box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.1);
+}
+
+#new:hover {
+  transform: translateY(-2px);
+  box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.3);
 }
