--- a/views/show.ejs
+++ b/views/show.ejs
@@ -8,6 +8,7 @@
       @import url('https://fonts.googleapis.com/css2?family=Dosis:wght@400;600;700&family=Fredericka+the+Great&family=Source+Serif+4:opsz@8..60&display=swap');
       </style>
     <link rel="stylesheet" href="/stylesheets/styles.css" />
+    <link rel="stylesheet" href="/stylesheets/show.css" />
     <title>Document</title>
   </head>
   <body>
@@ -27,36 +28,56 @@
         <div>
           <img src="<%=craft.image%>" />
         </div>
+        <div id="reviews">Reviews
+          <div><div>Title of Review</div>
+          <div>Review Description</div>
+          <div>Username on Date</div></div>
+        </div>
       </div>
-      <div id="seller-dets">
-        <h1><%=craft.title %></h1>
+      <div id="details">
+        <div id="productTitle"><%=craft.title %>
+            <form
+            action="/api/v1/crafts/<%=craft._id%>/edit"
+            method="GET"
+          >
+            <button>Edit Craft</button>
           <form
-          action="/api/v1/crafts/<%=craft._id%>/edit"
-          method="GET"
-        >
-          <button>Edit Craft</button>
-        <form
-          action="/api/v1/crafts/<%=craft._id%>/?_method=DELETE"
-          method="POST"
-        >
-          <button>Delist Craft</button>
-        </form>
-        <div>$<%=craft.price%></div>
-        <% if (craft.stock > 0) {%> <%=craft.stock%> in stock
-        <div>
-          <label for="qty-select">Quantity:</label>
+            action="/api/v1/crafts/<%=craft._id%>/?_method=DELETE"
+            method="POST"
+          >
+            <button>Delist Craft</button>
+          </form>
+        </div>
+        <div class="price">$ <%=craft.price%></div>
+        <% if (craft.stock > 0) {%>
+        <div id="qtySelect">
+          <label for="qty-select">Quantity</label>
+          <br>
           <select name="qty-select" id="qty-select">
             <% for (let i = 1; i <= craft.stock ; i ++) {%>
             <option value="<%= i %> "><%= i %></option>
             <% } %>
           </select>
         </div>
-        <button>Buy Now</button>
-        <button>Add to Cart</button>
+        <div id="shoppingButtons">
+          <form
+          action="/api/v1/crafts/<%=craft._id%>/edit"
+          method="GET"
+        >
+          <button id="buyButton">Buy Now | <%=craft.stock%> in stock</button>
+        </form>
+        <form
+          action="/api/v1/crafts/<%=craft._id%>/?_method=DELETE"
+          method="POST"
+        >
+          <button id="addCartButton">Add to Cart</button>
+        </form>
+        </div>
         <% } else {%>
-        <div>Out Of Stock!</div>
+        <div id="OOS">Out Of Stock!</div>
         <% } %>
-        <div><%=craft.description%></div>
+        <div id="shipping"><div>Shipping Fee</div><div>Shipping Arrival</div></div>
+        <div id="description"><div>Description</div><%=craft.description%></div>
       </div>
     </div>
   </body>
