Added CSS to edit form

--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Dosis:wght@400;600;700&family=Fredericka+the+Great&family=Source+Serif+4:opsz@8..60&display=swap');
-      </style>
+    </style>
     <link rel="stylesheet" href="/stylesheets/styles.css" />
+    <link rel="stylesheet" href="/stylesheets/edit.css" />
     <title>Document</title>
   </head>
   <body>
@@ -23,45 +24,67 @@
       </div>
     </nav>
     <div id="product">
-      <div id="img-review">
+      <div id="img">
         <div>
           <img src="<%=craft.image%>" />
         </div>
       </div>
-      <div id="seller-dets">
+      <div id="editForm">
         <form action="/api/v1/crafts/<%=craft._id%>?_method=PUT" method="POST">
-          <label for="title">Title:</label>
-          <input
-            type="text"
-            name="title"
-            id="title"
-            value="<%=craft.title %>"
-          />
-          <label for="category-select">Choose a category:</label>
-          <select name="category" id="category-select">
-            <% for (let category of craftSchema.obj.category.enum) {%>
-            <option value="<%=category%>"><%=category%></option>
-            <% } %>
-          </select>
-          <label for="price">Price:</label>
-          <input
-            type="number"
-            name="price"
-            id="price"
-            value="<%=craft.price%>"
-          />
-          <label for="stock">Stock:</label>
-          <input
-            type="number"
-            name="stock"
-            id="stock"
-            value="<%=craft.stock%>"
-          />
-          <label for="description">Description:</label>
-          <textarea name="description" id="description" cols="30" rows="10">
+          <div class="editable">
+            <label for="title">Title:</label>
+            <input
+              type="text"
+              name="title"
+              id="title"
+              value="<%=craft.title %>"
+            />
+          </div>
+          <div class="editable">
+            <label for="category-select">Choose a category:</label>
+            <select name="category" id="category-select">
+              <% for (let category of craftSchema.obj.category.enum) {%>
+              <option value="<%=category%>"><%=category%></option>
+              <% } %>
+            </select>
+          </div>
+          <div class="editable">
+            <label for="image">Image:</label>
+            <input
+              type="text"
+              name="image"
+              id="image"
+              value="<%=craft.image%>"
+            />
+          </div>
+          <div class="editable">
+            <label for="price">Price:</label>
+            <input
+              type="number"
+              name="price"
+              id="price"
+              value="<%=craft.price%>"
+            />
+          </div>
+          <div class="editable">
+            <label for="stock">Stock:</label>
+            <input
+              type="number"
+              name="stock"
+              id="stock"
+              value="<%=craft.stock%>"
+            />
+          </div>
+          <div class="editable">
+            <label for="description">Description:</label>
+            <textarea name="description" id="description" cols="75" rows="10">
 <%=craft.description%></textarea
-          >
-          <button>Save Craft</button>
+            >
+          </div>
+          <button id="saveButton">Save Craft</button>
+        </form>
+        <form action="/api/v1/crafts/<%=craft._id%>">
+          <button id="backButton">Back</button>
         </form>
       </div>
     </div>
