--- a/views/new.ejs
+++ b/views/new.ejs
@@ -9,6 +9,7 @@
     </style>
     <link rel="stylesheet" href="/stylesheets/styles.css" />
     <link rel="stylesheet" href="/stylesheets/new.css" />
+    <script defer src="/scripts/newScript.js"></script>
     <title>Document</title>
   </head>
   <body>
@@ -24,10 +25,7 @@
       </div>
     </nav>
     <div id="product">
-      <div id="imagePreview">
-        Your Image Here
-        <img src="" />
-      </div>
+      <div id="imagePreview"><span>Your Image Here</span></div>
       <div id="newForm">
         <form action="/api/v1/crafts/" method="POST">
           <div class="editable">
