--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -93,3 +93,8 @@
   transform: translateY(-2px);
   box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.3);
 }
+
+a {
+  text-decoration: none;
+  color: black;
+}
