--- a/views/show.ejs
+++ b/views/show.ejs
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Dosis:wght@400;600;700&family=Fredericka+the+Great&family=Source+Serif+4:opsz@8..60&display=swap');
-      </style>
+    </style>
     <link rel="stylesheet" href="/stylesheets/styles.css" />
     <link rel="stylesheet" href="/stylesheets/show.css" />
     <title>Document</title>
@@ -28,19 +28,21 @@
         <div>
           <img src="<%=craft.image%>" />
         </div>
-        <div id="reviews">Reviews
-          <div><div>Title of Review</div>
-          <div>Review Description</div>
-          <div>Username on Date</div></div>
+        <div id="reviews">
+          Reviews
+          <div>
+            <div>Title of Review</div>
+            <div>Review Description</div>
+            <div>Username on Date</div>
+          </div>
         </div>
       </div>
       <div id="details">
-        <div id="productTitle"><%=craft.title %>
-            <form
-            action="/api/v1/crafts/<%=craft._id%>/edit"
-            method="GET"
-          >
+        <div id="productTitle">
+          <%=craft.title %>
+          <form action="/api/v1/crafts/<%=craft._id%>/edit" method="GET">
             <button>Edit Craft</button>
+          </form>
           <form
             action="/api/v1/crafts/<%=craft._id%>/?_method=DELETE"
             method="POST"
@@ -52,7 +54,7 @@
         <% if (craft.stock > 0) {%>
         <div id="qtySelect">
           <label for="qty-select">Quantity</label>
-          <br>
+          <br />
           <select name="qty-select" id="qty-select">
             <% for (let i = 1; i <= craft.stock ; i ++) {%>
             <option value="<%= i %> "><%= i %></option>
@@ -60,24 +62,27 @@
           </select>
         </div>
         <div id="shoppingButtons">
+          <form action="/api/v1/crafts/<%=craft._id%>/edit" method="GET">
+            <button id="buyButton">Buy Now | <%=craft.stock%> in stock</button>
+          </form>
           <form
-          action="/api/v1/crafts/<%=craft._id%>/edit"
-          method="GET"
-        >
-          <button id="buyButton">Buy Now | <%=craft.stock%> in stock</button>
-        </form>
-        <form
-          action="/api/v1/crafts/<%=craft._id%>/?_method=DELETE"
-          method="POST"
-        >
-          <button id="addCartButton">Add to Cart</button>
-        </form>
+            action="/api/v1/crafts/<%=craft._id%>/?_method=DELETE"
+            method="POST"
+          >
+            <button id="addCartButton">Add to Cart</button>
+          </form>
         </div>
         <% } else {%>
         <div id="OOS">Out Of Stock!</div>
         <% } %>
-        <div id="shipping"><div>Shipping Fee</div><div>Shipping Arrival</div></div>
-        <div id="description"><div>Description</div><%=craft.description%></div>
+        <div id="shipping">
+          <div>Shipping Fee</div>
+          <div>Shipping Arrival</div>
+        </div>
+        <div id="description">
+          <div>Description</div>
+          <%=craft.description%>
+        </div>
       </div>
     </div>
   </body>
