--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -7,12 +7,36 @@
 #display {
   grid-column: 1/1;
   display: flex;
-  justify-content: space-evenly;
-  align-items: center;
+  justify-content: flex-end;
   font-family: 'Dosis', sans-serif;
   font-weight: 600;
   flex-wrap: wrap;
   background-color: #f7ecde;
+}
+
+#display form {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 10px;
+}
+
+#display input {
+  border-radius: 20px;
+  width: 70%;
+  height: 50px;
+}
+
+#display button {
+  border-radius: 50%;
+}
+
+#cards {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  width: 90%;
 }
 
 #controls {
