--- a/views/index.ejs
+++ b/views/index.ejs
@@ -24,6 +24,7 @@
         <button><img src="/images/search-icon.png" /></button>
       </form>
       <div>
+        <img src="/images/cart-icon.png" />
         <img src="/images/shop-icon.png" />
         <img src="/images/bell-icon.png" />
       </div>
