Using passport for auth, removed bcrypt logic

--- a/views/show.ejs
+++ b/views/show.ejs
@@ -21,6 +21,8 @@
           <input type="text" name="username" id="username" />
           <label for="password">Password</label>
           <input type="password" name="password" id="password" />
+          <input type="checkbox" id="seller" name="seller" />
+          <label for="seller">Sign Up as Seller</label>
           <button>Sign Up</button>
         </form>
         <form action="/login" method="POST">
