--- a/public/stylesheets/show.css
+++ b/public/stylesheets/show.css
@@ -44,6 +44,7 @@
   font-family: 'Dosis', sans-serif;
   border-radius: 50px;
   box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.1);
+  transition: 300ms;
 }
 
 #product button:hover {
