--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -19,7 +19,9 @@
         <input type="text" placeholder="Discover life's inspirations..." />
         <button><img src="/images/search-icon.png" /></button>
       </form>
-      <div>
+      <div id="navicons">
+        <div id="signIn">Sign In</div>
+        <img src="/images/cart-icon.png" />
         <img src="/images/shop-icon.png" />
         <img src="/images/bell-icon.png" />
       </div>
