--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/stylesheets/styles.css" />
     <link rel="stylesheet" href="/stylesheets/index.css" />
-    <script defer src="/scripts/indexScript.js"></script>
     <title>LifeCraft</title>
   </head>
   <body>
@@ -23,7 +22,8 @@
         />
         <button><img src="/images/search-icon.png" /></button>
       </form>
-      <div>
+      <div id="navicons">
+        <div id="signIn">Sign In</div>
         <img src="/images/cart-icon.png" />
         <img src="/images/shop-icon.png" />
         <img src="/images/bell-icon.png" />
