--- a/public/stylesheets/authForms.css
+++ b/public/stylesheets/authForms.css
@@ -29,7 +29,7 @@
   font-size: 40px;
   text-align: center;
   width: 100%;
-  height: 15%;
+  height: 10%;
   margin-top: 15px;
 }
 
@@ -59,7 +59,8 @@
 
 #register form button,
 #logIn form button,
-#registerBtn {
+#registerBtn,
+#backLogInBtn {
   font-size: 20px;
   font-family: 'Dosis', sans-serif;
   font-weight: 700;
@@ -79,7 +80,8 @@
 
 #register form button:hover,
 #logIn form button:hover,
-#registerBtn:hover {
+#registerBtn:hover,
+#backLogInBtn:hover {
   box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.3);
 }
 
